--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -98,7 +98,7 @@ typeIcon = "🎯"
 myname = "Ahmed Ashraf"
 email = "ahmed.kotb.7573@gmail.com"
 whoami = "Computer Science Student | Linux Enthusiast | CTF Player"
-bioImageUrl = "images/avatar.jpeg"
+bioImageUrl = "images/whoami/avatar.jpg"
 useGravatar = false
 location = "Giza, Egypt"
 link = "https://pxlman.github.io"
@@ -197,14 +197,14 @@ dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author=
 
 [socialOptions]
 email = "mailto:ahmed.kotb.7573@gmail.com"
-phone = "+201126836740"
+# phone = "+201126836740"
 facebook = ""
 twitter = ""
 github = "https://github.com/pxlman"
 stack-overflow = ""
 instagram = ""
 google-plus = ""
-youtube = "https://youtube.com/c/0xpxlman"
+youtube = "https://youtube.com/@0xpxlman"
 medium = ""
 tumblr = ""
 linkedin = "https://www.linkedin.com/in/ahmed-ashraf-swe"
