--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,6 +10,12 @@ name = "CTFs"
 url = "ctfs"
 weight = 2
 
+[[main]]
+identifier = "posts"
+name = "Posts"
+url = "posts"
+weight = 3
+
 # [[main]]
 # identifier = "archive"
 # name = "Archive"
